--- a/mybatis-generator/pom.xml
+++ b/mybatis-generator/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>mybatis-generator-core</artifactId>
             <version>1.3.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.1</version>
+        </dependency>
     </dependencies>
 
 </project>
