--- a/zpy-upload/pom.xml
+++ b/zpy-upload/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.zpy</groupId>
     <artifactId>zpy-upload</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>zpy-upload</name>
     <description>Demo project for Spring Boot</description>
 
