--- a/zpy-upload/Dockerfile
+++ b/zpy-upload/Dockerfile
@@ -4,6 +4,6 @@ FROM openjdk:8
 # update packages and install maven
 WORKDIR /usr/src/app
 
-ADD ./target/xiaobing-index-0.0.1.jar /usr/src/app/app.jar
+ADD ./target/zpy-upload-0.0.1.jar /usr/src/app/app.jar
 
 CMD ["java", "-jar", "/usr/src/app/app.jar"]
